--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -8,4 +8,5 @@
     android:elevation="4dp"
     app:titleMarginStart="0dp"
     app:contentInsetStartWithNavigation="0dp"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
+    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+    app:popupTheme="@style/MyDarkToolbarStyle"/>
