--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,12 @@
         <item name="android:textColor">@color/textColorPrimary</item>
     </style>
 
+    <style name="ButtonStyle">
+        <item name="background">@color/white</item>
+        <item name="android:textColor">@color/textButton</item>
+        <item name="textAllCaps">false</item>
+    </style>
+
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
