--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,8 +16,9 @@
     </style>
 
     <style name="ButtonStyle">
-        <item name="background">@color/white</item>
+        <item name="android:background">@drawable/rounded_button</item>
         <item name="android:textColor">@color/textButton</item>
+        <item name="android:elevation">4dp</item>
         <item name="textAllCaps">false</item>
     </style>
 
