--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
         android:id="@+id/iv_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="80dp"
         android:contentDescription="@string/logo_content_description"
         android:src="@drawable/ic_baju_logo"
         app:layout_constraintTop_toTopOf="parent"
@@ -31,9 +31,13 @@
         android:id="@+id/btn_emailPasswordAuth"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/large_top_separator"
+        android:layout_marginTop="@dimen/top_separator"
         android:text="@string/btn_ingresaConCorreoTxt"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:contentDescription="@string/btn_ingresaConCorreoTxt"
+        android:drawableStart="@drawable/ic_mail"
+        android:drawablePadding="10dp"
         style="@style/ButtonStyle"
         app:layout_constraintTop_toBottomOf="@id/sign_in_button"
         app:layout_constraintEnd_toEndOf="parent"
