--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,6 @@
     <color name="blueIconColor">#027ADA</color>
     <color name="backgroundButton">#ffffff</color>
     <color name="white">#ffffff</color>
+    <color name="hint_gray">#979797</color>
     <color name="button_pressed">#C8C8C8</color>
 </resources>
