--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     tools:context=".login.LoginHomeScreenActivity">
 
     <include
-        android:id="@+id/i_logo"
+        android:id="@+id/i_logo_login_activity"
         layout="@layout/sign_in_logo"/>
 
     <com.google.android.gms.common.SignInButton
@@ -16,7 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/large_top_separator"
-        app:layout_constraintTop_toBottomOf="@id/i_logo"
+        app:layout_constraintTop_toBottomOf="@id/i_logo_login_activity"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
