--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="button_bottom">10dp</dimen>
     <dimen name="large_top_separator">40dp</dimen>
     <dimen name="top_separator">24dp</dimen>
+    <dimen name="min_separator">5dp</dimen>
 </resources>
