--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,6 +30,16 @@
         <item name="android:textStyle">italic</item>
     </style>
 
+    <style name="EditTextNormal" parent="@style/Widget.AppCompat.EditText">
+        <item name="android:paddingTop">5dp</item>
+        <item name="android:paddingBottom">5dp</item>
+        <item name="android:paddingStart">10dp</item>
+        <item name="android:paddingEnd">10dp</item>
+        <item name="hintTextColor">@color/hint_gray</item>
+        <item name="android:background">@color/white</item>
+        <item name="android:textColor">@color/windowBackground</item>
+    </style>
+
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
