Email and password layout

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="large_top_separator">40dp</dimen>
     <dimen name="top_separator">24dp</dimen>
     <dimen name="min_separator">5dp</dimen>
+    <dimen name="medium_separator">12dp</dimen>
 </resources>
