--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,10 +24,19 @@
 
     <style name="NormalTextStyle">
         <item name="textAllCaps">false</item>
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/white</item>
         <item name="fontFamily">@font/merienda_one</item>
         <item name="android:textStyle">italic</item>
+    </style>
+
+    <style name="ErrorTextStyle">
+        <item name="textAllCaps">false</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/red</item>
+        <item name="fontFamily">@font/merienda_one</item>
+        <item name="android:textStyle">italic</item>
+
     </style>
 
     <style name="EditTextNormal" parent="@style/Widget.AppCompat.EditText">
@@ -36,6 +45,7 @@
         <item name="android:paddingStart">10dp</item>
         <item name="android:paddingEnd">10dp</item>
         <item name="hintTextColor">@color/hint_gray</item>
+        <item name="android:textSize">14sp</item>
         <item name="android:background">@color/white</item>
         <item name="android:textColor">@color/windowBackground</item>
     </style>
