--- a/app/src/main/res/layout/activity_firebase_auth_login.xml
+++ b/app/src/main/res/layout/activity_firebase_auth_login.xml
@@ -16,8 +16,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Error message"
         tools:text="Error message"
+        android:visibility="invisible"
+        tools:visibility="visible"
         style="@style/ErrorTextStyle"
         app:layout_constraintTop_toBottomOf="@id/i_logo_fb_auth_login"
         app:layout_constraintStart_toStartOf="parent"
