--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -46,8 +46,12 @@
         <item name="android:paddingEnd">10dp</item>
         <item name="hintTextColor">@color/hint_gray</item>
         <item name="android:textSize">14sp</item>
-        <item name="android:background">@color/white</item>
+        <item name="android:background">@drawable/white_background</item>
         <item name="android:textColor">@color/windowBackground</item>
+    </style>
+
+    <style name="ErrorEditText" parent="EditTextNormal">
+        <item name="android:background">@drawable/error_background</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
