--- a/app/src/main/res/layout/activity_firebase_auth_login.xml
+++ b/app/src/main/res/layout/activity_firebase_auth_login.xml
@@ -7,9 +7,17 @@
     android:layout_height="match_parent"
     tools:context=".login.FirebaseAuthLoginActivity">
 
-    <include
-        android:id="@+id/i_logo_fb_auth_login"
-        layout="@layout/sign_in_logo"/>
+    <LinearLayout
+        android:id="@+id/ll_logo_fb_auth_login"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/large_top_separator"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+        <include
+            layout="@layout/sign_in_logo"/>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/tv_errorMessage"
@@ -20,7 +28,7 @@
         android:visibility="invisible"
         tools:visibility="visible"
         style="@style/ErrorTextStyle"
-        app:layout_constraintTop_toBottomOf="@id/i_logo_fb_auth_login"
+        app:layout_constraintTop_toBottomOf="@id/ll_logo_fb_auth_login"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
