--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,16 +7,24 @@
     android:layout_height="match_parent"
     tools:context=".login.LoginHomeScreenActivity">
 
-    <include
-        android:id="@+id/i_logo_login_activity"
-        layout="@layout/sign_in_logo"/>
+    <LinearLayout
+        android:id="@+id/ll_logo_login_activity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+        <include
+            layout="@layout/sign_in_logo"/>
+    </LinearLayout>
 
     <com.google.android.gms.common.SignInButton
         android:id="@+id/sign_in_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/large_top_separator"
-        app:layout_constraintTop_toBottomOf="@id/i_logo_login_activity"
+        app:layout_constraintTop_toBottomOf="@id/ll_logo_login_activity"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
