--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,7 +26,7 @@
         <item name="textAllCaps">false</item>
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/white</item>
-        <item name="fontFamily">@font/merienda_one</item>
+        <item name="fontFamily">@font/poppins</item>
         <item name="android:textStyle">italic</item>
     </style>
 
@@ -34,18 +34,19 @@
         <item name="textAllCaps">false</item>
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/red</item>
-        <item name="fontFamily">@font/merienda_one</item>
+        <item name="fontFamily">@font/poppins</item>
         <item name="android:textStyle">italic</item>
 
     </style>
 
     <style name="EditTextNormal" parent="@style/Widget.AppCompat.EditText">
-        <item name="android:paddingTop">5dp</item>
-        <item name="android:paddingBottom">5dp</item>
+        <item name="android:paddingTop">3dp</item>
+        <item name="android:paddingBottom">3dp</item>
         <item name="android:paddingStart">10dp</item>
         <item name="android:paddingEnd">10dp</item>
         <item name="hintTextColor">@color/hint_gray</item>
         <item name="android:textSize">14sp</item>
+        <item name="fontFamily">@font/poppins</item>
         <item name="android:background">@drawable/white_background</item>
         <item name="android:textColor">@color/windowBackground</item>
     </style>
