--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -37,13 +37,26 @@
                 style="@style/NormalTextStyle"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/ll_logo_fb_auth_createAccount" />
+                app:layout_constraintTop_toBottomOf="@id/ll_logo_fb_auth_createAccount"/>
+
+            <TextView
+                android:id="@+id/tv_ccMensajeDeError"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/min_separator"
+                tools:text="Mensaje de error"
+                android:visibility="gone"
+                tools:visibility="visible"
+                style="@style/ErrorTextStyle"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_creaTuCuenta"/>
 
             <LinearLayout
                 android:id="@+id/ll_cc_nombre"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/medium_separator"
+                android:layout_marginTop="@dimen/large_top_separator"
                 android:layout_marginStart="@dimen/top_separator"
                 android:layout_marginEnd="@dimen/top_separator"
                 android:orientation="horizontal"
